# latex-arxiv-SKILL

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml  requirements.txt
.codex/: settings.local.json
.codex/skills/academic-paper-writer/: README.md  SKILL.md
.codex/skills/academic-paper-writer/assets/: paper-config.schema.yml  paper-issues-template.csv
.codex/skills/academic-paper-writer/references/: bibtex-guide.md  citation-workflow.md  quality-report.md  research-workflow.md
.codex/skills/academic-paper-writer/scripts/: bootstrap_review_paper.py  compile_paper.py  create_paper_plan.py  literature_registry.py  lqs_scorer.py  paper_config.py  paper_utils.py  review_gaps.py  run_review_simulation.py  validate_paper_issues.py
.codex/skills/academic-paper-writer/subskills/figures-tables/: SKILL.md
.codex/skills/academic-paper-writer/subskills/literature-search/: SKILL.md
.codex/skills/academic-paper-writer/subskills/review-sim/: SKILL.md  review-prompt-templates.md
.codex/skills/academic-paper-writer/subskills/structure-logic/: SKILL.md
.codex/skills/collaborating-with-claude/scripts/: claude_bridge.py
.cursor/skills/academic-paper-writer/assets/: paper-plan-template.md  review-template.md
.cursor/skills/academic-paper-writer/assets/template/: main-biomedical.template.typ  main.template.typ
.cursor/skills/academic-paper-writer/assets/typst-templates/: README.md  figure.template.typ
.cursor/skills/academic-paper-writer/references/: research-workflow.md  template-usage.md  visual-templates.md
.cursor/skills/academic-paper-writer/scripts/: bootstrap_review_paper.py  compile_paper.py  create_paper_plan.py  literature_registry.py  paper_utils.py  run_review_simulation.py  validate_paper_issues.py
.cursor/skills/academic-paper-writer/subskills/figures-tables/: SKILL.md
.cursor/skills/academic-paper-writer/subskills/literature-search/: SKILL.md
.cursor/skills/collaborating-with-gemini/scripts/: gemini_bridge.py
.cursor/skills/latex-rhythm-refiner/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test.yml
example/v0.5-sqlite-multi-SKILLs/video-world-simulators-3d4d-review/: ref.bib
example/v1-multi-domain/: README.md
example/v1-multi-domain/crispr-cancer-review/: paper-config.yml
example/v1-multi-domain/crispr-cancer-review/issues/: 2026-06-04_crispr-cancer-review.csv
example/v1-multi-domain/crispr-cancer-review/plan/: 2026-06-04_crispr-cancer-review.md
example/v2-typst-first/transformer-architectures-review/: README.md  main.typ  paper-config.yml  ref.bib
example/v2-typst-first/transformer-architectures-review/figures/: diagram.template.typ  table.template.typ
example/v2-typst-first/transformer-architectures-review/issues/: 2026-06-05_22-00-00-transformer-architectures-review.csv
example/v2-typst-first/transformer-architectures-review/notes/: literature-registry.sqlite3
example/v2-typst-first/transformer-architectures-review/plan/: 2026-06-05_21-58-34-transformer-architectures-review.md
tests/: conftest.py  test_bootstrap.py  test_bridge.py  test_compile.py  test_create_plan.py  test_e2e_workflow.py  test_literature_registry.py  test_lqs_scorer.py  test_paper_config.py  test_paper_utils.py  test_review_gaps.py  test_run_review_simulation.py  test_validate_issues.py
(+5 files in other folders)
