[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "latex-arxiv-skill"
version = "1.1.0"
description = "AI-assisted academic review paper writing framework"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = ["pyyaml>=6.0,<7"]

[project.scripts]
paper-bootstrap = "scripts.bootstrap_review_paper:main"
paper-lit = "scripts.literature_registry:main"
paper-config = "scripts.paper_config:main"
paper-compile = "scripts.compile_paper:main"
paper-validate = "scripts.validate_paper_issues:main"
paper-review-gaps = "scripts.review_gaps:main"
paper-review-sim = "scripts.run_review_simulation:main"
paper-lqs = "scripts.lqs_scorer:main"

[project.optional-dependencies]
test = ["pytest>=7.0,<9"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
